--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							</li>
 
 							<li>
-								<a href="img/CV.pdf" class="btn btn-default btn-lg" download><i class="fa fa-file fa-fw"></i> <span class="network-name">Resume</span></a>
+								<a href="img/resume.pdf" class="btn btn-default btn-lg" download><i class="fa fa-file fa-fw"></i> <span class="network-name">Resume</span></a>
 							</li>
 
 						</ul>
