--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<ul class="list-inline intro-social-buttons">
 
 							<li>
-								<a href="https://github.com/poirot1729" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">github</span></a>
+								<a href="https://github.com/mrgraycode" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">github</span></a>
 							</li>
 
 							<li>
@@ -271,7 +271,7 @@ GUI. The C++ code and Scilab were linked using scilab functions.</p>
 					<ul class="list-inline banner-social-buttons">
 
 						<li>
-							<a href="https://github.com/poirot1729" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">github</span></a>
+							<a href="https://github.com/mrgraycode" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">github</span></a>
 						</li>
 
 						<li>
@@ -279,7 +279,7 @@ GUI. The C++ code and Scilab were linked using scilab functions.</p>
 						</li>
 
 						<li>
-							<a href="" class="btn btn-default btn-lg"><i class="fa fa-file fa-fw"></i> <span class="network-name">Resume</span></a>
+							<a href="img/resume.pdf" class="btn btn-default btn-lg" download><i class="fa fa-file fa-fw"></i> <span class="network-name">Resume</span></a>
 						</li>
 
 					</ul>
