--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ GUI. The C++ code and Scilab were linked using scilab functions.</p>
 
 			<div class="row">
 				<div class="col-lg-6">
-					<h2>Keep in Touch:</h2>
+					<h2>Contact</h2>
 				</div>
 				<div class="col-lg-6">
 					<ul class="list-inline banner-social-buttons">
