--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    
+
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -179,6 +179,8 @@ toolbox.</p>
 <p>The functions for the toolbox were implemented using C++ and were callable from the Scilab
 GUI. The C++ code and Scilab were linked using scilab functions.</p>
 <p>The OpenCV and PCL libraries were used for this purpose.</p>
+<br>
+<p><a href="https://drive.google.com/open?id=0B_zSxrafwAmxZGtOUVNTZ3NrT1E">Internship Report</a></p>
 										</div>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
