--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ toolbox.</p>
 GUI. The C++ code and Scilab were linked using scilab functions.</p>
 <p>The OpenCV and PCL libraries were used for this purpose.</p>
 <br>
-<p><a href="https://drive.google.com/open?id=0B_zSxrafwAmxZGtOUVNTZ3NrT1E">Internship Report</a></p>
+<p><a href="https://drive.google.com/open?id=0B_zSxrafwAmxZGtOUVNTZ3NrT1E" target="_blank">Internship Report</a></p>
 										</div>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
