--- a/index.html
+++ b/index.html
@@ -146,6 +146,28 @@
 									<div class="col-lg-5 col-sm-6">
 											<hr class="section-heading-spacer">
 											<div class="clearfix"></div>
+											<h2 class="section-heading">IEEE Computer Society<br>Technergize Team<br>August 2017 - present</h2>
+											<div class="lead">
+												<p>Conducted by IEEE Computer Society India Council, Technergize, is an extraordinary opportunity for all the innovators, coders and technophiles. It is a yearlong internship in cutting edge technologies spanning over Data Mining, Cybersecurity, Cryptography, AI & Cognitive Science, NLP, Image and Video processing with valuable guidance from domain experts which makes this contest one of its kind.</p>
+												<p>My team is working on a robot fitted with stereo-vision cameras. The robot needs to make a map of the environment as it goes along. We also need to extend this to multiple robots and integrate them. </p>
+											</div>
+									</div>
+									<div class="col-lg-5 col-lg-offset-2 col-sm-6">
+											<img class="img-responsive" src="img/experiences/technergize.jpg" alt="">
+									</div>
+							</div>
+
+					</div>
+					<!-- /.container -->
+
+			</div>
+
+			<div class="content-section-a">
+					<div class="container">
+							<div class="row">
+									<div class="col-lg-5 col-sm-6">
+											<hr class="section-heading-spacer">
+											<div class="clearfix"></div>
 											<h2 class="section-heading">IEEE<br>Kochi Hub Technical Team<br>Member<br>2016 - present</h2>
 											<div class="lead">
 												<p>The Kochi Hub Technical Team(KHTT) is a team of IEEE volunteers coordinating and conducting various events across the Kochi subsection.</p>
@@ -161,7 +183,7 @@
 
 			</div>
 
-    <div class="content-section-a">
+    <div class="content-section-b">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
@@ -195,7 +217,7 @@ GUI. The C++ code and Scilab were linked using scilab functions.</p>
 
     </div>
 
-		<div class="content-section-b">
+		<div class="content-section-a">
 				<div class="container">
 						<div class="row">
 								<div class="col-lg-5 col-sm-6">
@@ -216,7 +238,7 @@ GUI. The C++ code and Scilab were linked using scilab functions.</p>
 
 		</div>
 
-		<div class="content-section-a">
+		<div class="content-section-b">
 				<div class="container">
 						<div class="row">
 								<div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
@@ -237,7 +259,7 @@ GUI. The C++ code and Scilab were linked using scilab functions.</p>
 
 		</div>
 
-		<div class="content-section-b">
+		<div class="content-section-a">
 				<div class="container">
 						<div class="row">
 								<div class="col-lg-5 col-sm-6">
